[package]
name = "stars_rs"
version = "0.1.0"
edition = "2021"
authors = ["Leonid Trofymchuk <stesel23@gmail.com>"]
description = "Star shooter with bevy/wgpu"
repository = "https://github.com/stesel/stars_rs"

[dependencies]
bevy = "0.9.1"
rand = "0.8.5"

[dev-dependencies]
more-asserts = "0.3.1"

# dynamic linking - cargo run --features bevy/dynamic
